# hephustus

./: .gitignore  CONTEXT.md  README.md  architecture-coordinator.md  architecture.md  index.md  log.md  prd-coordinator.md  pyproject.toml  structural.md
agents/: index.md  issue-dag.md  worker-brief-template.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
hephaestus/: __init__.py  artifact_spec.py  catalog.py  codeview.py  contract.py  core.py  dashboard.py  desktop.py  eval_context.py  frontmatter.py  handoff.py  identity.py  index.py  models.py  monitor.py  okf_layout.py  skills.py  watch.py  workflow_runtime.py  workflows.py  workspace.py
issues/: 001-workspace-store-bootstrap.md  002-agent-profiles-roster.md  003-threads-runs-transcript.md  004-client-owned-context-pruning.md  005-trace-capture-audit.md  006-evaluationcontext-unified-rules.md  007-execution-contract-governance.md  008-orchestrator-handoff-spawn.md  009-notifications-correction-box.md  README.md
sample/: .gitignore
tests/: conftest.py  test_artifact_spec.py  test_artifacts.py  test_catalog.py  test_codeview.py  test_contract.py  test_contract_resolution.py  test_corrections.py  test_dashboard.py  test_desktop_agent.py  test_eval_context.py  test_frontmatter.py  test_frozen_rules.py  test_governance.py  test_handoff.py  test_identity.py  test_integration.py  test_models.py  test_monitor.py  test_nodes.py  test_okf_layout.py  test_okf_layout_paths.py  test_profiles.py  test_provider_registry.py  test_rules.py  test_skills.py  test_store.py  test_threads.py  (+6 more)
(+141 files in other folders)
